--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server to listen for and do CRUD operation for device tokens of EPNS",
   "main": "app.js",
   "scripts": {
-    "start": "node -r ts-node/register ./src/app.ts",
+    "start": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
